# dryader

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
dryader/: __init__.py  api.py  cli.py  downloader.py
scripts/: dryader-cli.py
tests/: __init__.py  test_api.py  test_downloader.py
